--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
-    "next": "11.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "12",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
